# financial-watchdog-backend

./: .coveragerc  .gitignore  Dockerfile.devcontainer  LICENSE  Makefile  README.md  docker-compose.devcontainer.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  investigation_request.md  pull_request_template.md
env/: template.env
src/: config.py  main.py  sample.py
src/config/: settings.py
src/db/: session.py
src/responses/: base.py  health.py  version.py
src/routers/: __init__.py  health.py  version.py
tests/: test_config.py  test_sample.py
tests/routers/: test_health.py  test_version.py
