[tool.poetry]
name = "financial-watchdog-backend"
version = "0.0.0"
description = ""
authors = ["yswd"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
pyyaml = "^6.0.1"
python-json-logger = "^2.0.7"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
black = "^24.4.2"
ruff = "^0.5.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.0"
poethepoet = "^0.27.0"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "G004", # `logging-f-string`
    "PLC1901", # compare-to-empty-string
    "PLR2004", # magic-value-comparison
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN401", # any-type
    "ERA", # commented-out-code
    "ARG002", # unused-method-argument
    "INP001", # implicit-namespace-package
    "PGH004", # blanket-noqa
    "B008", # use Depends
    "A002", # builtin-argument-shadowing
    "A003", # builtin-attribute-shadowing
    "PLR0913", # too-many-arguments
    "RSE", # flake8-raise
    "D", # pydocstyle
    "C90", # mccabe
    "T20", # flake8-print
    "SLF", #  flake8-self
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "TRY", # tryceratops
    "COM", # flake8-commas
    "S", # flake8-bandit
    "EM",#flake8-errmsg
    "EXE", # flake8-executable
    "ICN", # flake8-import-conventions
    "RET",#flake8-return
    "SIM",#flake8-simplify
    "TCH", # flake8-type-checking
    "ISC", #flake8-implicit-str-concat
    "N", # pep8-naming
    "PT", # flake8-pytest-style
    "PGH003"
]

[tool.poe.tasks]
test = "pytest $1 --cov=/app --cov-report term-missing"

line-length=80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
